Bug 243817 - Fix the remaining WPT failures for imperative slot API
Summary: Fix the remaining WPT failures for imperative slot API
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 218692
  Show dependency treegraph
 
Reported: 2022-08-11 02:22 PDT by Ryosuke Niwa
Modified: 2022-08-11 19:11 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2022-08-11 02:22:49 PDT
Implement slotchange event and a few other things to make WebKit pass all the tests.
Comment 1 Ryosuke Niwa 2022-08-11 02:45:42 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3217
Comment 2 EWS 2022-08-11 19:10:33 PDT
Committed 253359@main (547334061646): <https://commits.webkit.org/253359@main>

Reviewed commits have been landed. Closing PR #3217 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-08-11 19:11:21 PDT
<rdar://problem/98543390>