Fix the remaining WPT failures for imperative slot API https://bugs.webkit.org/show_bug.cgi?id=243817

Reviewed by Chris Dumez.

This patch improves the imperative slot API implementation in WebKit by adding support for slotchange event.

* LayoutTests/fast/shadow-dom/manual-assignment-multiple-shadow-roots-expected.txt: Added.
* LayoutTests/fast/shadow-dom/manual-assignment-multiple-shadow-roots.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/imperative-slot-api-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/imperative-slot-api-slotchange-expected.txt:
* LayoutTests/platform/win/TestExpectations:

* Source/WebCore/dom/Node.cpp:
(WebCore::Node::setManuallyAssignedSlot): Destruct the renderer when the assigned slot of this node changes.

* Source/WebCore/dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::didRemoveManuallyAssignedNode): Added.
* Source/WebCore/dom/ShadowRoot.h:

* Source/WebCore/dom/SlotAssignment.cpp:
(WebCore::NamedSlotAssignment::didRemoveManuallyAssignedNode): Added.
(WebCore::NamedSlotAssignment::willRemoveAssignedNode):
(WebCore::ManualSlotAssignment::assignedNodesForSlot):
(WebCore::ManualSlotAssignment::addSlotElementByName): Added the logic to enqueue a slotchange event.
(WebCore::ManualSlotAssignment::removeSlotElementByName): Ditto.
(WebCore::ManualSlotAssignment::slotManualAssignmentDidChange): Now notifies slots in other shadow trees
about changes in assigned nodes to enqueue slotchange event.
(WebCore::ManualSlotAssignment::didRemoveManuallyAssignedNode): Added. Gets called when one of the assigned
nodes to re-assigned to a slot in another tree.
(WebCore::ManualSlotAssignment::willRemoveAssignedNode): Added the logic to enqueue a slotchange event.

* Source/WebCore/dom/SlotAssignment.h:
(WebCore::ShadowRoot::willRemoveAssignedNode):

* Source/WebCore/html/HTMLSlotElement.cpp:
(WebCore::HTMLSlotElement::assign): Added the logic to clear the previously assigned slot.

Canonical link: https://commits.webkit.org/253359@main